app/assets/stylesheets/common.scss
@mixin setFont($type, $style, $weight, $size, $lineHeight, $color) {
  font-family: $type;
  font-style: $style;
  font-weight: $weight;
  font-size: $size;
  line-height: $lineHeight;
  color: $color;
}

// Dropdown Menu
.dropdown {
  display: inline-block;
  width: 100%;
  z-index: 999;

  .dropdownHead {
    @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--inactive-gray));
    padding: 10px 12px;
    border: 1px solid var(--inactive-gray);
    border-radius: 8px;
    cursor: pointer;
    position: relative;
    transition: all .5s;

    &.active {
      @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--mantle-off-white));
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
      border-color: var(--dark);
      background: var(--card-color);
    }

    &::after {
      content: "";
      height: 20px;
      width: 20px;
      background-image: url("../images/icon/downArrowWhite.png");
      background-size: 18px;
      background-repeat: no-repeat;
      position: absolute;
      right: 12px;
      top: 12px;
      transform-origin: center center;
      transition: all .5s;
    }

    &.active::after {
      top: 10px;
      transform: rotate(180deg);
    }

    .currentSelected {
      line-height: 20px;
    }

    &.active + .dropdownBody {
      @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--mantle-off-white));
    }
  }

  .dropdownBody {
    @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--inactive-gray));
    position: relative;

    .dropdownBodyInner {
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      background: var(--card-color);
      display: none;
      border: 1px solid var(--dark);
      border-top: none;
      border-bottom-left-radius: 8px;
      border-bottom-right-radius: 8px;
      overflow: hidden;

      .dropdownItem {
        padding: 10px 12px;
        cursor: pointer;
        transition: all .5s;
        background: var(--card-color);
        line-height: 20px;
        position: relative;
        z-index: 89;

        &:nth-last-child(1) {
          padding-bottom: 10px;
        }
      }
    }
  }
}

// Tooltip
.form-copy-message.active {
  animation: msg-copied 2s ease-in-out forwards;
}

.form-copy-message {
  margin-left: 5px;
  font-size: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: var(--popup-bg);
  color: var(--inactive-gray);
  position: relative;
  top: 10px;
  opacity: 0;
}
.form-copy-message{
  &.top {
    margin-left: 5px;
    font-size: 10px;
    padding: 5px 10px;
    border-radius: 5px;
    background-color: var(--popup-bg);
    color: var(--inactive-gray);
    position: relative;
    top: 10px;
    left: -50%;
    opacity: 1;
  }
}

@media (max-width: 1200px) {
  .form-copy-message {
    display: none;
  }
  .form-copy-message.active {
    animation: msg-copied 2s ease-in-out forwards;
  }
}

@keyframes msg-copied {
  0% {
    top: 10px;
    opacity: 0;
  }
  20% {
    top: 0px;
    opacity: 1;
  }
  80% {
    top: 0px;
    opacity: 1;
  }
  100% {
    top: -10px;
    opacity: 0;
  }
}

// Coming Soon Btn
#comingSoonBtn {
  position: relative;
  overflow: hidden;
  outline: none;
  cursor: pointer;
}

#comingSoonBtn::before {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: 'Send';
  transition: all .3s;
}

#comingSoonBtn::after {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 60px;
  left: 0;
  width: 100%;
  height: 100%;
  content: 'Coming Soon';
  transition: all .3s;
}

#comingSoonBtn:hover::before {
  top: -60px;
}

#comingSoonBtn:hover::after {
  top: 0;
}

// New Components
.mntlButton {
  @include setFont(var(--font-type-2), normal, 600, 16px, 19px, var(--button-text));
  text-transform: capitalize;
  width: 200px;
  padding: 9px 0px;
  border: none;
  outline: none;
  border-radius: 32px;

  &.primaryButton {
    &.active {
      background-color: var(--default);

      &:hover {
        box-shadow: 0px 0px 10px rgba(255, 201, 66, 0.5);
      }
    }

    &.disable {
      background-color: var(--disable-yellow);
      cursor: none;
      pointer-events: none;
      -webkit-touch-callout: none;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
    }
  }
}

.bi {
  font-size: 20px;
  line-height: 20px;

  &.iconDefault {
    color: var(--default);
  }

  &.iconBlack {
    color: var(--card-dark);
  }

  &.iconWhite {
    color: var(--mantle-off-white);
  }

  &.iconSuccess {
    color: var(--connected);
  }

  &.iconError {
    color: var(--error);
  }

  &.iconGray {
    color: var(--gray);
  }

  &.iconLarge {
    font-size: 30px;
  }

  &.iconMedium {
    font-size: 18px;
  }

  &.iconSmall {
    font-size: 14px;
  }

  &.iconSize16 {
    font-size: 16px;
  }

  &.iconSize20 {
    font-size: 20px;
  }

  &.iconSize24 {
    font-size: 24px;
  }
}

// Add To Wishlist Button
.addToWishlist {
  border: none;
  background: none;
  transition: transform 0.4s ease;

  &:hover {
    cursor: pointer;
  }

  &:active {
    transform: scale(1.3);
  }

  .heartIcon {
    width: 18px;
    height: 18px;

    path {
      fill: none;
      stroke-width: 2;
      stroke: var(--icon-white);
    }
  }

  &.clicked {
    .heartIcon {
      path {
        fill: var(--default);
        stroke-width: 0;
      }
    }
  }
}

// Toggle Button
.toggleBtn {
  position: relative;
  right: 0;

  span {
    box-shadow: none !important;
    border: 2px solid var(--line);
    background: var(--popup-bg);
    @include setFont(var(--font-type-2), normal, 600, 14px, 17px, var(--text-medium));

    &:first-child {
      border-top-left-radius: 4px;
      border-bottom-left-radius: 4px;
    }

    &:last-child {
      border-top-right-radius: 4px;
      border-bottom-right-radius: 4px;
    }

    &:hover {
      background: var(--dark);
      border: 2px solid var(--line);
    }

    &.active {
      background: var(--dark);
      border: 2px solid var(--line);
      @include setFont(var(--font-type-2), normal, 600, 14px, 17px, var(--card-color));
    }
  }
}

#gasPriceToggleButton {
  display: grid;
  grid-template-columns: repeat(3, minmax(0, 1fr));
  grid-auto-flow: column;
}

// Menu on Hover
.hoverMenu {
  @include setFont(var(--font-type-1), normal, 500, 14px, 17px, var(--mantle-off-white));
  text-transform: capitalize;
  display: flex;
  align-items: center;
  cursor: pointer;
  .links {
    .menuItem {
      list-style: none;
      position: relative;
      a{
        color: var(--mantle-off-white);
        line-height: 30px;
      }
      .subMenu {
        text-transform: none;
        background: var(--card-dark);
        border: 2px solid var(--line-2);
        border-radius: 10px;
        height: fit-content;
        width: 180px;
        position: absolute;
        left: 0px;
        top: 55px;
        transform: translateX(-32px);
        z-index: 99;
        padding: 12px 24px;
        opacity: 0;
        visibility: hidden;
        transition: all 0.3s ease;
        cursor: auto;
        &::before {
          content: '';
          border-left: 9px solid transparent;
          border-right: 9px solid transparent;
          border-bottom: 9px solid var(--card-dark);
          position: absolute;
          top: -11px;
          left: 30px;
        }
        .subMenuList {
          margin: 4px;
          .subMenuItem {
            padding: 12px 6px !important;
            border-bottom: 2px solid #383838;
            cursor: pointer;
            .subMenuItemLink {
              gap: 12px;
              .subMenuItemLabel {
                @include setFont(var(--font-type-2), normal, 600, 16px, 19px, var(--mantle-off-white));
                text-transform: capitalize;
                @media (max-width: 992px) {
                  font-size: 14px;
                }
              }
            }
            &:last-child {
              border: none;
            }
          }
        }
        @media (max-width: 992px) {
          width: 200px;
          padding: 12px 12px;
        }
      }
      &:hover {
        .subMenu {
          top: 35px;
          opacity: 1;
          visibility: visible;
        }
      }
    }
  }
}

// Tooltip
.tooltip-inner {
  background: var(--card-dark);
  border:2px solid var(--line-2);
}
.bs-tooltip-auto[data-popper-placement^=top] .tooltip-arrow::before, .bs-tooltip-top .tooltip-arrow::before{
  border-top-color: var(--line-2);
}

// Snackbar
#commonSnackBar {
  visibility: hidden;
  min-width: 250px;
  margin-left: -125px;
  background-color: var(--card-dark);
  text-align: center;
  padding: 16px;
  position: fixed;
  z-index: 9999;
  left: 50%;
  bottom: 30px;
  border-radius: 30px;
  font-family: var(--font-type-2);
  color: var(--default);
  font-size: 14px;
  border: 2px solid var(--popup-bg);
}

#commonSnackBar.show {
  visibility: visible;
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

@-webkit-keyframes fadein {
  from {bottom: 0; opacity: 0;}
  to {bottom: 30px; opacity: 1;}
}

@keyframes fadein {
  from {bottom: 0; opacity: 0;}
  to {bottom: 30px; opacity: 1;}
}

@-webkit-keyframes fadeout {
  from {bottom: 30px; opacity: 1;}
  to {bottom: 0; opacity: 0;}
}

@keyframes fadeout {
  from {bottom: 30px; opacity: 1;}
  to {bottom: 0; opacity: 0;}
}

// Common Error
.commonError{
  @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--error));
  position: relative;
}

// Pagination Button
.paginationButton{
  @include setFont(var(--font-type-2), normal, 400, 14px, 17px, var(--default));
  cursor: pointer;
  &.small{
    i{
      font-size: 14px;
    }
  }
}

.gasFeesLabel{
  @include setFont(var(--font-type-2), normal, 700, 14px, 17px, var(--inactive-gray));
}

// Horizontal Switcher
.nav{
  --bs-nav-link-padding-x: 1rem;
  --bs-nav-link-padding-y: 0rem;
  --bs-nav-link-color: var(--gray);
  --bs-nav-link-hover-color: var(--gray);
  --bs-nav-link-disabled-color: var(--disable);

  &.nav-tabs{
    --bs-nav-tabs-border-width: 0px;
    --bs-nav-tabs-border-color: transparent;
    --bs-nav-tabs-border-radius: 0rem;
    --bs-nav-tabs-link-hover-border-color: transparent;
    --bs-nav-tabs-link-active-color: var(--default);
    --bs-nav-tabs-link-active-bg: transparent;
    --bs-nav-tabs-link-active-border-color: transparent;
    border-bottom: none;

    .nav-link{
      @include setFont(var(--font-type-1), normal, 500, 14px, 17px, var(--gray));
      &.active{
        @include setFont(var(--font-type-1), normal, 700, 14px, 17px, var(--default));
      }
      &:first-child{
        padding-left: 0px;
      }
    }
  }
}
.tab-content{
  .tab-pane{
    &.fade{
      transition-duration: 0.2s;
      transition-timing-function: ease-in-out;
    }
  }
}
.sendCoinAmountField{
  position: relative;
  .availableBalance{
    position: absolute;
    right: 0;
    @include setFont(var(--font-type-1), normal, 500, 14px, 17px, var(--default));
    cursor: pointer;
  }
}

